[project]
name = "rl-mcp-community"
version = "0.1.0"
description = "ReversingLabs Community MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.4",
    "mcp[cli]==1.14.0",
    "rl-protect",
]

[dependency-groups]
dev = [
    "ruff==0.13.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
rl-mcp-community = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = [
    # pycodestyle (error)
    "E",
    # pycodestyle (warning)
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pep8-naming
    "N",
    # flake8-bandit
    "S",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-datetimez
    "DTZ",
    # flake8-logging-format
    "LOG",
    # flake8-pie
    "PIE",

]

[tool.ruff.lint.mccabe]
max-complexity = 15
